// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskBar /> Snapshots <Clock /> should match snapshot 1`] = `
.c0 {
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c1 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c2 div:first-child {
  right: 0;
}

<div>
  <div
    class="c0"
    height="auto"
    style="display: flex; justify-content: center; align-items: center;"
    width="auto"
  >
    <div
      class="c1 c2"
    >
      
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

<div>
  <button
    class="c0 c1"
    height="auto"
    width="auto"
  >
    <i
      class="c2"
      height="20"
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </button>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with active prop 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c3 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  outline: 1px dotted #000000;
  outline-offset: -4px;
  padding-top: 4px;
  padding-right: 2px;
  padding-bottom: 0;
  padding-left: 4px;
}

<div>
  <button
    class="c0 c1"
    height="auto"
    width="auto"
  >
    <i
      class="c2"
      height="20"
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </button>
  <button
    class="c3 c4"
    height="auto"
    width="auto"
  >
    <i
      class="c2"
      height="20"
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </button>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with icon prop 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

<div>
  <button
    class="c0 c1"
    height="auto"
    width="auto"
  >
    <i
      class="c2"
      data-icon-name="bat"
      height="20"
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </button>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with small prop 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

<div>
  <button
    class="c0 c1"
    height="auto"
    width="auto"
  >
    <i
      class="c2"
      height="20"
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </button>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot 1`] = `
.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  padding: 2px;
}

.c1 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c4 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  box-shadow: none;
  padding-left: 0;
  margin-left: 2px;
}

.c5 {
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c6 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c7 div:first-child {
  right: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

<div>
  <div
    class="c0"
    display="flex"
    height="28"
    width="100%"
  >
    <button
      class="c1 c2"
      height="auto"
      width="auto"
    >
      <i
        class="c3"
        data-icon-name="logo"
        height="20"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </button>
    <div
      class="c4"
      display="flex"
      height="auto"
      width="100%"
    />
    <div
      class="c5"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="c6 c7"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with list prop 1`] = `
.c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  padding: 2px;
}

.c1 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c4 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  box-shadow: none;
  padding-left: 0;
  margin-left: 2px;
}

.c5 {
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c6 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c7 div:first-child {
  right: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

<div>
  <div
    class="c0"
    display="flex"
    height="28"
    width="100%"
  >
    <button
      class="c1 c2"
      height="auto"
      width="auto"
    >
      <i
        class="c3"
        data-icon-name="logo"
        height="20"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </button>
    <div
      class="c4"
      display="flex"
      height="auto"
      width="100%"
    />
    <div
      class="c5"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="c6 c7"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with list prop 2`] = `
<div>
  <div
    class="sc-JsfGe PEIsU"
    display="flex"
    height="28"
    width="100%"
  >
    .c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 32px;
  height: 32px;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 2px 6px;
}

.c2 i {
  margin-right: 10px;
}

.c2:hover {
  background-color: #000e7a;
  color: #ffffff;
}

.c2 ul {
  display: none;
  position: absolute;
  top: -2px;
  left: 97%;
  color: #000000;
}

.c2 ul i {
  width: 18px;
  height: 20px;
  margin-right: 6px;
}

.c2 svg {
  fill: #ffffff;
}

.c1 {
  background-color: #c3c7cb;
  padding: 5px 20px 6px;
  border: none;
  margin: 0;
  padding: 2px;
  list-style: none;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e, 1px 1px 0 1px #000000;
  width: 200px;
}

.c0 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  position: absolute;
  bottom: 28px;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

<div
      class="c0"
      height="auto"
      width="auto"
    >
      <ul
        class="c1"
        width="200"
      >
        <li
          class="c2"
        >
          <i
            class="c3"
            data-icon-name="reader_closed"
            height="32"
            style="background-image: url(buffer-32-4-1);"
            width="32"
          />
          Local Disk (C:)
        </li>
        <li
          class="c2"
        >
          <i
            class="c3"
            data-icon-name="windows_explorer"
            height="32"
            style="background-image: url(buffer-32-4-1);"
            width="32"
          />
          Windows Explorer
        </li>
      </ul>
    </div>
    <button
      class="sc-JsfGe sc-hkoqCG dSEShf jyIXGv"
      height="auto"
      width="auto"
    >
      <i
        class="sc-gstumO gYrVcR"
        data-icon-name="logo"
        height="20"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </button>
    <div
      class="sc-JsfGe dZDqmK"
      display="flex"
      height="auto"
      width="100%"
    />
    <div
      class="sc-JsfGe kalnGE"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="sc-dksuAk dBsGaw sc-jhGSUB gcSXVA"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with one Modal 1`] = `
.c6 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 0px #000000;
}

.c6:disabled {
  color: #868a8e;
}

.c6:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c6:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c12 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #000e7a;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 2px;
}

.c5:last-child {
  margin-right: 0;
}

.c7 {
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-size: 10px;
}

.c7:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c7:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c9 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  padding: 2px;
}

.c10 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c13 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  box-shadow: none;
  padding-left: 0;
  margin-left: 2px;
}

.c17 {
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c14 {
  background-color: #e6e6e6;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c18 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c19 div:first-child {
  right: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c16 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1 draggable"
    >
      <i
        class="c2"
        data-icon-name="bat"
        height="13"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="15"
      />
      <div
        class="c3"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <li
          class="c5"
        >
          <button
            class="c6 c7"
          >
            ?
          </button>
        </li>
        <li
          class="c5"
        >
          <button
            class="c6 c7"
          >
            x
          </button>
        </li>
      </ul>
    </div>
    <div
      class="c8"
    />
  </div>
  <div
    class="c9"
    display="flex"
    height="28"
    width="100%"
  >
    <button
      class="c10 c11"
      height="auto"
      width="auto"
    >
      <i
        class="c12"
        data-icon-name="logo"
        height="20"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </button>
    <div
      class="c13"
      display="flex"
      height="auto"
      width="100%"
    >
      <button
        class="c14 c15"
        height="auto"
        width="auto"
      >
        <i
          class="c12"
          data-icon-name="bat"
          height="20"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="20"
        />
        <span
          class="c16"
        >
          file.bat
        </span>
      </button>
    </div>
    <div
      class="c17"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="c18 c19"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with two Modals 1`] = `
.c6 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 0px #000000;
}

.c6:disabled {
  color: #868a8e;
}

.c6:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c6:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c14 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 1px #000000;
  width: auto;
  height: auto;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #868a8e;
}

.c10 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #000e7a;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 2px;
}

.c5:last-child {
  margin-right: 0;
}

.c7 {
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-size: 10px;
}

.c7:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c7:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c11 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  padding: 2px;
}

.c12 {
  background-color: #c3c7cb;
  width: auto;
  height: auto;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
}

.c15 {
  background-color: #c3c7cb;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  box-shadow: none;
  padding-left: 0;
  margin-left: 2px;
}

.c19 {
  background-color: transparent;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  padding-right: 6px;
  padding-left: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
}

.c18 {
  background-color: #e6e6e6;
  width: auto;
  height: auto;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c20 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c21 div:first-child {
  right: 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  border: none;
  outline: none;
  width: 100%;
}

.c17 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1 draggable"
    >
      <i
        class="c2"
        data-icon-name="windows_explorer"
        height="13"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="15"
      />
      <div
        class="c3"
      >
        Windows Explorer
      </div>
      <ul
        class="c4"
      >
        <li
          class="c5"
        >
          <button
            class="c6 c7"
          >
            ?
          </button>
        </li>
        <li
          class="c5"
        >
          <button
            class="c6 c7"
          >
            x
          </button>
        </li>
      </ul>
    </div>
    <div
      class="c8"
    />
  </div>
  <div
    class="c9 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c10 draggable"
    >
      <i
        class="c2"
        data-icon-name="bat"
        height="13"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="15"
      />
      <div
        class="c3"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <li
          class="c5"
        >
          <button
            class="c6 c7"
          >
            ?
          </button>
        </li>
        <li
          class="c5"
        >
          <button
            class="c6 c7"
          >
            x
          </button>
        </li>
      </ul>
    </div>
    <div
      class="c8"
    />
  </div>
  <div
    class="c11"
    display="flex"
    height="28"
    width="100%"
  >
    <button
      class="c12 c13"
      height="auto"
      width="auto"
    >
      <i
        class="c14"
        data-icon-name="logo"
        height="20"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </button>
    <div
      class="c15"
      display="flex"
      height="auto"
      width="100%"
    >
      <button
        class="c12 c16"
        height="auto"
        width="auto"
      >
        <i
          class="c14"
          data-icon-name="windows_explorer"
          height="20"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="20"
        />
        <span
          class="c17"
        >
          Windows Explorer
        </span>
      </button>
      <button
        class="c18 c16"
        height="auto"
        width="auto"
      >
        <i
          class="c14"
          data-icon-name="bat"
          height="20"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="20"
        />
        <span
          class="c17"
        >
          file.bat
        </span>
      </button>
    </div>
    <div
      class="c19"
      height="auto"
      style="display: flex; justify-content: center; align-items: center;"
      width="auto"
    >
      <div
        class="c20 c21"
      >
        
      </div>
    </div>
  </div>
</div>
`;
